--- a/MASTERcollector.Core/MASTERcollector.Core.csproj
+++ b/MASTERcollector.Core/MASTERcollector.Core.csproj
@@ -59,11 +59,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Database\Database.cs" />
+    <Compile Include="Database\DatabaseContext.cs" />
+    <Compile Include="Database\Entities\Setting.cs" />
     <Compile Include="Database\IArticle.cs" />
     <Compile Include="Database\IIsolatedStorage.cs" />
     <Compile Include="Engine\CollectTaskContext.cs" />
     <Compile Include="Engine\CollectTaskStatus.cs" />
-    <Compile Include="Engine\Configuration.cs" />
+    <Compile Include="Misc\Configuration.cs" />
     <Compile Include="Engine\ICollector.cs" />
     <Compile Include="Engine\Logger.cs" />
     <Compile Include="Framework.cs" />
@@ -76,9 +79,7 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Misc\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.106.0\build\net45\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.106.0\build\net45\System.Data.SQLite.Core.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
